--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -29,7 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
+/.angular
 .sass-cache/
 /connect.lock
 /coverage
@@ -40,4 +40,5 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
-/money.tracker.ui.iml
+/money-tracker-ui.iml
+/.vscode/
