--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money.tracker.ui",
+  "name": "money-tracker-ui",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@lagoshny/ngx-hateoas-client": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "bootstrap": "^5.1.3",
     "keycloak-angular": "^9.1.0",
