--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-svg-core": "~6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@lagoshny/ngx-hateoas-client": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "@ngneat/content-loader": "^7.0.0",
     "bootstrap": "^5.1.3",
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^16.1.1",
