--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@lagoshny/ngx-hateoas-client": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@ngneat/content-loader": "^7.0.0",
+    "angular8-yandex-maps": "^13.2.0",
     "bootstrap": "^5.1.3",
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^16.1.1",
