--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@lagoshny/ngx-hateoas-client": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@ngneat/content-loader": "^7.0.0",
+    "ag-charts-angular": "^6.0.0",
+    "ag-charts-community": "^6.0.2",
+    "angular-plotly.js": "^4.0.4",
     "angular8-yandex-maps": "^13.2.0",
     "bootstrap": "^5.1.3",
     "keycloak-angular": "^10.0.1",
     "keycloak-js": "^18.0.1",
+    "plotly.js-dist-min": "^2.12.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -39,6 +43,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
