--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -11,7 +11,7 @@ server {
       add_header        Cache-Control private;
 
       location ~* ^/api/ {
-           rewrite ^/api/(.*) /$1 break;
+           rewrite ^/api/(.*) /api/$1 break;
            proxy_http_version 1.1;
            # docker compose service + docker port
            proxy_pass http://money_tracker_api:8080;
