[-] Fixed docker service names

--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
 
-  money_tracker_ui:
+  money-tracker-ui:
     container_name: clematis-money-tracker-ui
     image: money.tracker.ui:latest
     networks:
