--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -13,7 +13,7 @@ server {
       location ~* ^/api/ {
            proxy_http_version 1.1;
            # docker compose service + docker port
-           proxy_pass http://money_tracker_api:8080;
+           proxy_pass http://money-tracker-api:8080;
       }
 
       # redirect server error pages to the static page /40x.html
