[+] Fixed restart policy

--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -8,5 +8,5 @@ services:
       - "18081:80"
     volumes:
       - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
-    restart: on-failure
+    restart: unless-stopped
 
