--- a/package.json
+++ b/package.json
@@ -12,26 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.1.0",
-    "@angular/common": "~14.1.0",
-    "@angular/compiler": "~14.1.0",
-    "@angular/core": "~14.1.0",
-    "@angular/forms": "~14.1.0",
-    "@angular/platform-browser": "~14.1.0",
-    "@angular/platform-browser-dynamic": "~14.1.0",
-    "@angular/router": "~14.1.0",
-    "@fortawesome/angular-fontawesome": "^0.10.2",
-    "@fortawesome/fontawesome-svg-core": "~6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@angular/animations": "~14.2.4",
+    "@angular/cdk": "^14.2.4",
+    "@angular/common": "~14.2.4",
+    "@angular/compiler": "~14.2.4",
+    "@angular/core": "~14.2.4",
+    "@angular/forms": "~14.2.4",
+    "@angular/material": "^14.2.4",
+    "@angular/platform-browser": "~14.2.4",
+    "@angular/platform-browser-dynamic": "~14.2.4",
+    "@angular/router": "~14.2.4",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "~6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@lagoshny/ngx-hateoas-client": "^3.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "^14.5.2",
+    "@nrwl/angular": "^14.8.3",
+    "@nrwl/web": "^14.8.3",
+    "@nrwl/express": "^14.8.3",
     "ag-charts-angular": "^6.1.0",
     "ag-charts-community": "^6.1.0",
     "angular-plotly.js": "^4.0.4",
-    "angular8-yandex-maps": "^14.0.1",
-    "bootstrap": "^5.2.0",
+    "angular8-yandex-maps": "^14.0.3",
     "keycloak-angular": "^12.1.0",
     "keycloak-js": "^19.0.2",
     "plotly.js-dist-min": "^2.13.3",
@@ -40,9 +42,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.1.0",
-    "@angular/cli": "~14.1.0",
-    "@angular/compiler-cli": "~14.1.0",
+    "@angular-devkit/build-angular": "~14.2.4",
+    "@angular/cli": "~14.2.4",
+    "@angular/compiler-cli": "~14.2.4",
+    "@nrwl/workspace": "~14.8.3",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^12.11.1",
     "@types/plotly.js-dist-min": "^2.3.0",
@@ -52,9 +55,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2",
-    "@nrwl/workspace": "14.5.2",
-    "nx": "14.5.2",
-    "prettier": "^2.6.2"
+    "nx": "14.8.3",
+    "prettier": "^2.7.1",
+    "typescript": "~4.8.0"
   }
 }
