--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "~14.2.4",
     "@angular/core": "~14.2.4",
     "@angular/forms": "~14.2.4",
+    "@angular/localize": "^14.2.5",
     "@angular/material": "^14.2.4",
     "@angular/platform-browser": "~14.2.4",
     "@angular/platform-browser-dynamic": "~14.2.4",
@@ -28,8 +29,8 @@
     "@lagoshny/ngx-hateoas-client": "^3.1.0",
     "@ngneat/content-loader": "^7.0.0",
     "@nrwl/angular": "^14.8.3",
-    "@nrwl/web": "^14.8.3",
     "@nrwl/express": "^14.8.3",
+    "@nrwl/web": "^14.8.3",
     "ag-charts-angular": "^6.1.0",
     "ag-charts-community": "^6.1.0",
     "angular-plotly.js": "^4.0.4",
