[+] Added stop docker compose step

--- a/apps/money-tracker-ui/Jenkinsfile
+++ b/apps/money-tracker-ui/Jenkinsfile
@@ -37,6 +37,7 @@ pipeline {
       steps {
         sh '''
            cd ./apps/money-tracker-ui/jenkins
+           docker compose stop
            docker compose build
            docker compose up -d
         '''
