[+] Refactored to form common modules

--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,8 @@
 {
   "version": 2,
   "projects": {
+    "model": "libs/model",
+    "money-tracker-service": "libs/money-tracker-service",
     "money-tracker-ui": "apps/money-tracker-ui"
   }
 }
