--- a/package.json
+++ b/package.json
@@ -46,11 +46,21 @@
     "@angular-devkit/build-angular": "~14.2.4",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "~14.2.4",
+    "@nrwl/eslint-plugin-nx": "14.8.3",
+    "@nrwl/jest": "14.8.3",
+    "@nrwl/linter": "14.8.3",
     "@nrwl/workspace": "~14.8.3",
     "@types/jasmine": "~4.0.3",
+    "@types/jest": "28.1.1",
     "@types/node": "^12.11.1",
     "@types/plotly.js-dist-min": "^2.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "jasmine-core": "~4.0.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
@@ -58,6 +68,8 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "nx": "14.8.3",
     "prettier": "^2.7.1",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.8.0"
   }
 }
