[+] Added shared components library [+] Added breadcrumbs component

--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "projects": {
     "model": "libs/model",
     "money-tracker-service": "libs/money-tracker-service",
-    "money-tracker-ui": "apps/money-tracker-ui"
+    "money-tracker-ui": "apps/money-tracker-ui",
+    "shared-components": "libs/shared-components"
   }
 }
