--- a/apps/money-tracker-ui/project.json
+++ b/apps/money-tracker-ui/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "money-tracker-ui",
   "projectType": "application",
   "generators": {
     "@schematics/angular:application": {
@@ -25,9 +26,7 @@
           "apps/money-tracker-ui/src/styles.css"
         ],
         "scripts": [],
-        "allowedCommonJsDependencies": [
-          "keycloak-js"
-        ]
+        "allowedCommonJsDependencies": ["keycloak-js"]
       },
       "configurations": {
         "production": {
