--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
     "mock": "json-server --watch ./src/assets/mockbackend.json --routes ./src/assets/routes.json",
-    "postinstall": "node ./decorate-angular-cli.js"
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main"
   },
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "~6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@lagoshny/ngx-hateoas-client": "^3.1.0",
+    "@lagoshny/ngx-hateoas-client": "^3.3.5",
     "@ngneat/content-loader": "^7.0.0",
     "@nrwl/angular": "^14.8.3",
     "@nrwl/express": "^14.8.3",
@@ -39,13 +39,19 @@
     "keycloak-js": "^19.0.3",
     "plotly.js-dist-min": "^2.13.3",
     "rxjs": "~7.5.6",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.2.4",
+    "@angular-eslint/eslint-plugin": "~14.0.4",
+    "@angular-eslint/eslint-plugin-template": "~14.0.4",
+    "@angular-eslint/template-parser": "~14.0.4",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "~14.2.4",
+    "@angular/language-service": "~14.2.0",
     "@nrwl/eslint-plugin-nx": "14.8.3",
     "@nrwl/jest": "14.8.3",
     "@nrwl/linter": "14.8.3",
@@ -61,6 +67,7 @@
     "jasmine-core": "~4.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "~12.2.2",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
