--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,9 @@
       "@clematis-shared/model": ["libs/model/src/index.ts"],
       "@clematis-shared/money-tracker-service": [
         "libs/money-tracker-service/src/index.ts"
+      ],
+      "@clematis-shared/shared-components": [
+        "libs/shared-components/src/index.ts"
       ]
     },
     "rootDir": "."
