--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "rxjs": "~7.5.6",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "node-sass": "^7.0.3",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
