--- a/package.json
+++ b/package.json
@@ -35,15 +35,17 @@
     "ag-charts-community": "^6.1.0",
     "angular-plotly.js": "^4.0.4",
     "angular8-yandex-maps": "^14.0.3",
+    "echarts": "^5.4.0",
     "keycloak-angular": "^12.1.0",
     "keycloak-js": "^19.0.3",
+    "ngx-echarts": "^14.0.0",
+    "node-sass": "^7.0.3",
     "plotly.js-dist-min": "^2.13.3",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
     "rxjs": "~7.5.6",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
-    "node-sass": "^7.0.3",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
     "tailwindcss": "^3.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
