--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.4",
-    "@angular/cdk": "^14.2.4",
-    "@angular/common": "~14.2.4",
-    "@angular/compiler": "~14.2.4",
-    "@angular/core": "~14.2.4",
-    "@angular/forms": "~14.2.4",
-    "@angular/localize": "^14.2.5",
-    "@angular/material": "^14.2.4",
-    "@angular/platform-browser": "~14.2.4",
-    "@angular/platform-browser-dynamic": "~14.2.4",
-    "@angular/router": "~14.2.4",
+    "@angular/animations": "15.0.4",
+    "@angular/cdk": "15.0.3",
+    "@angular/common": "15.0.4",
+    "@angular/compiler": "15.0.4",
+    "@angular/core": "15.0.4",
+    "@angular/forms": "15.0.4",
+    "@angular/localize": "15.0.4",
+    "@angular/material": "15.0.3",
+    "@angular/platform-browser": "15.0.4",
+    "@angular/platform-browser-dynamic": "15.0.4",
+    "@angular/router": "15.0.4",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "~6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@lagoshny/ngx-hateoas-client": "^3.3.5",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "^14.8.3",
-    "@nrwl/express": "^14.8.3",
-    "@nrwl/web": "^14.8.3",
+    "@nrwl/angular": "15.3.3",
+    "@nrwl/express": "15.3.3",
+    "@nrwl/web": "15.3.3",
     "ag-charts-angular": "^6.1.0",
     "ag-charts-community": "^6.1.0",
     "angular-plotly.js": "^4.0.4",
     "angular8-yandex-maps": "^14.0.3",
+    "dayjs": "latest",
     "echarts": "^5.4.0",
     "keycloak-angular": "^12.1.0",
     "keycloak-js": "^19.0.3",
-    "dayjs": "latest",
     "ngx-echarts": "^14.0.0",
     "node-sass": "^7.0.3",
     "plotly.js-dist-min": "^2.13.3",
@@ -52,17 +52,18 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.4",
-    "@angular-eslint/eslint-plugin": "~14.0.4",
-    "@angular-eslint/eslint-plugin-template": "~14.0.4",
-    "@angular-eslint/template-parser": "~14.0.4",
+    "@angular-devkit/build-angular": "15.0.4",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
     "@angular/cli": "~14.2.4",
-    "@angular/compiler-cli": "~14.2.4",
-    "@angular/language-service": "~14.2.0",
-    "@nrwl/eslint-plugin-nx": "14.8.3",
-    "@nrwl/jest": "14.8.3",
-    "@nrwl/linter": "14.8.3",
-    "@nrwl/workspace": "~14.8.3",
+    "@angular/compiler-cli": "15.0.4",
+    "@angular/language-service": "15.0.4",
+    "@nrwl/eslint-plugin-nx": "15.3.3",
+    "@nrwl/jest": "15.3.3",
+    "@nrwl/linter": "15.3.3",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/workspace": "15.3.3",
     "@types/jasmine": "~4.0.3",
     "@types/jest": "28.1.1",
     "@types/node": "^12.11.1",
@@ -74,16 +75,17 @@
     "jasmine-core": "~4.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.2",
+    "jest-preset-angular": "12.2.3",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "nx": "14.8.3",
+    "nx": "15.3.3",
     "prettier": "^2.7.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.0"
   }
 }
+
