--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
     "@angular/platform-browser": "15.0.4",
     "@angular/platform-browser-dynamic": "15.0.4",
     "@angular/router": "15.0.4",
-    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "~6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@lagoshny/ngx-hateoas-client": "^3.3.5",
+    "@lagoshny/ngx-hateoas-client": "^3.3.8",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "15.3.3",
+    "@nrwl/angular": "^15.2.4",
     "@nrwl/express": "15.3.3",
     "@nrwl/web": "15.3.3",
     "ag-charts-angular": "^6.1.0",
     "ag-charts-community": "^6.1.0",
     "angular-plotly.js": "^4.0.4",
-    "angular8-yandex-maps": "^14.0.3",
+    "angular8-yandex-maps": "^14.0.4",
     "dayjs": "latest",
     "echarts": "^5.4.0",
-    "keycloak-angular": "^12.1.0",
-    "keycloak-js": "^19.0.3",
+    "keycloak-angular": "^13.0.0",
+    "keycloak-js": "^20.0.2",
     "ngx-echarts": "^14.0.0",
     "node-sass": "^7.0.3",
     "plotly.js-dist-min": "^2.13.3",
@@ -52,19 +52,19 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.4",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "~14.2.4",
-    "@angular/compiler-cli": "15.0.4",
+    "@angular-devkit/build-angular": "^15.0.4",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@angular/cli": "~15.0.4",
+    "@angular/compiler-cli": "^15.0.4",
     "@angular/language-service": "15.0.4",
     "@nrwl/eslint-plugin-nx": "15.3.3",
     "@nrwl/jest": "15.3.3",
     "@nrwl/linter": "15.3.3",
     "@nrwl/nx-cloud": "15.0.2",
     "@nrwl/workspace": "15.3.3",
-    "@types/jasmine": "~4.0.3",
+    "@types/jasmine": "~4.3.1",
     "@types/jest": "28.1.1",
     "@types/node": "^12.11.1",
     "@types/plotly.js-dist-min": "^2.3.0",
@@ -75,7 +75,7 @@
     "jasmine-core": "~4.0.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.3",
+    "jest-preset-angular": "^12.2.3",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
@@ -88,4 +88,3 @@
     "typescript": "~4.8.0"
   }
 }
-
