--- a/apps/money-tracker-ui/tsconfig.spec.json
+++ b/apps/money-tracker-ui/tsconfig.spec.json
@@ -3,14 +3,15 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "types": [
-      "jasmine"
+      "jest", "node"
     ]
   },
   "files": [
-    "src/test.ts",
+    "src/test-setup.ts",
     "src/polyfills.ts"
   ],
   "include": [
+    "jest.config.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
