--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.0.4",
-    "@angular/cdk": "15.0.3",
-    "@angular/common": "15.0.4",
-    "@angular/compiler": "15.0.4",
-    "@angular/core": "15.0.4",
-    "@angular/forms": "15.0.4",
-    "@angular/localize": "15.0.4",
-    "@angular/material": "15.0.3",
-    "@angular/platform-browser": "15.0.4",
-    "@angular/platform-browser-dynamic": "15.0.4",
-    "@angular/router": "15.0.4",
+    "@angular/animations": "15.1.4",
+    "@angular/cdk": "15.1.4",
+    "@angular/common": "15.1.4",
+    "@angular/compiler": "15.1.4",
+    "@angular/core": "15.1.4",
+    "@angular/forms": "15.1.4",
+    "@angular/localize": "15.1.4",
+    "@angular/material": "15.1.4",
+    "@angular/platform-browser": "15.1.4",
+    "@angular/platform-browser-dynamic": "15.1.4",
+    "@angular/router": "15.1.4",
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "~6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@lagoshny/ngx-hateoas-client": "^3.5.0",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "^15.2.4",
-    "@nrwl/express": "15.3.3",
-    "@nrwl/web": "15.3.3",
+    "@nrwl/angular": "15.6.3",
+    "@nrwl/express": "15.6.3",
+    "@nrwl/web": "15.6.3",
     "ag-charts-angular": "^6.1.0",
     "ag-charts-community": "^6.1.0",
     "angular-plotly.js": "^4.0.4",
@@ -51,18 +51,18 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.4",
+    "@angular-devkit/build-angular": "15.1.5",
     "@angular-eslint/eslint-plugin": "15.1.0",
     "@angular-eslint/eslint-plugin-template": "15.1.0",
     "@angular-eslint/template-parser": "15.1.0",
     "@angular/cli": "~15.0.4",
-    "@angular/compiler-cli": "^15.0.4",
-    "@angular/language-service": "15.0.4",
-    "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/jest": "15.3.3",
-    "@nrwl/linter": "15.3.3",
-    "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/workspace": "15.3.3",
+    "@angular/compiler-cli": "15.1.4",
+    "@angular/language-service": "15.1.4",
+    "@nrwl/eslint-plugin-nx": "15.6.3",
+    "@nrwl/jest": "15.6.3",
+    "@nrwl/linter": "15.6.3",
+    "@nrwl/nx-cloud": "15.0.3",
+    "@nrwl/workspace": "15.6.3",
     "@types/jest": "28.1.1",
     "@types/node": "^12.11.1",
     "@types/plotly.js-dist-min": "^2.3.0",
@@ -73,10 +73,11 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "^12.2.3",
-    "nx": "15.3.3",
+    "nx": "15.6.3",
     "prettier": "^2.7.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.0"
   }
 }
+
