--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -19,7 +19,7 @@ server {
       location ~* ^/api/ {
                  proxy_http_version 1.1;
                  # docker compose service through common internal network
-                 proxy_pass http://money-tracker-api;
+                 proxy_pass http://money-tracker-api-demo;
             }
 
       # redirect server error pages to the static page /40x.html
