--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -1,39 +1,47 @@
-server {
+http {
 
-      listen     80 default_server;
+  upstream authbackend {
+      server auth-api-demo;
+  }
 
-      root /var/www/money-tracker-ui;
+  upstream apibackend {
+      server money-tracker-api-demo;
+  }
 
-      resolver 127.0.0.11 valid=1s ipv6=off;
+  server {
 
-      # Disabled caching so the browser won't cache the site.
-      expires           0;
-      add_header        Cache-Control private;
+        listen     80 default_server;
+        root /var/www/money-tracker-ui;
 
-      location ~* ^/auth/ {
-           proxy_http_version 1.1;
-           # docker compose service + docker port
-           proxy_pass http://auth-api;
-      }
+        # Disabled caching so the browser won't cache the site.
+        expires           0;
+        add_header        Cache-Control private;
 
-      location ~* ^/api/ {
-                 proxy_http_version 1.1;
-                 # docker compose service through common internal network
-                 proxy_pass http://money-tracker-api-demo;
-            }
+        location ~* ^/auth/ {
+             proxy_http_version 1.1;
+             # docker compose service + docker port
+             proxy_pass http://authbackend;
+        }
 
-      # redirect server error pages to the static page /40x.html
-      error_page 404 /404.html;
-          location = /40x.html {
-      }
+        location ~* ^/api/ {
+             proxy_http_version 1.1;
+             # docker compose service through common internal network
+             proxy_pass http://apibackend;
+        }
 
-      # redirect server error pages to the static page /50x.html
-      error_page 500 502 503 504 /50x.html;
-          location = /50x.html {
-      }
+        # redirect server error pages to the static page /40x.html
+        error_page 404 /404.html;
+            location = /40x.html {
+        }
 
-      location / {
-          index index.html;
-          try_files $uri $uri/ /index.html;
-      }
+        # redirect server error pages to the static page /50x.html
+        error_page 500 502 503 504 /50x.html;
+            location = /50x.html {
+        }
+
+        location / {
+            index index.html;
+            try_files $uri $uri/ /index.html;
+        }
+  }
 }
