--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -18,13 +18,13 @@
         location ~* ^/auth/ {
              proxy_http_version 1.1;
              # docker compose service + docker port
-             proxy_pass http://authbackend;
+             proxy_pass http://authbackend:8080;
         }
 
         location ~* ^/api/ {
              proxy_http_version 1.1;
              # docker compose service through common internal network
-             proxy_pass http://apibackend;
+             proxy_pass http://apibackend:8080;
         }
 
         # redirect server error pages to the static page /40x.html
