[-] Upstream may not have port 8080

--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -1,9 +1,9 @@
   upstream authbackend {
-      server auth-api;
+      server auth-api:8080;
   }
 
   upstream apibackend {
-      server money-tracker-api;
+      server money-tracker-api:8080;
   }
 
   server {
@@ -18,13 +18,13 @@
         location ~* ^/auth/ {
              proxy_http_version 1.1;
              # docker compose service + docker port
-             proxy_pass http://authbackend:8080;
+             proxy_pass http://authbackend;
         }
 
         location ~* ^/api/ {
              proxy_http_version 1.1;
              # docker compose service through common internal network
-             proxy_pass http://apibackend:8080;
+             proxy_pass http://apibackend;
         }
 
         # redirect server error pages to the static page /40x.html
