--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -1,10 +1,11 @@
   upstream authbackend {
-      server auth-api;
+      server auth-api:8080;
   }
 
   upstream apibackend {
-      server money-tracker-api-demo;
+      server money-tracker-api-demo:8080;
   }
+
 
   server {
 
