--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -17,12 +17,14 @@
 
         location ~* ^/auth/ {
              proxy_http_version 1.1;
+             proxy_set_header Host $host;
              # docker compose service + docker port
              proxy_pass http://authbackend;
         }
 
         location ~* ^/api/ {
              proxy_http_version 1.1;
+             proxy_set_header Host $host;
              # docker compose service through common internal network
              proxy_pass http://apibackend;
         }
