--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -16,29 +16,13 @@
         add_header        Cache-Control private;
 
         location ~* ^/auth/ {
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            # docker compose service + docker port
-            proxy_pass http://authbackend;
+             proxy_http_version 1.1;
+             proxy_pass http://192.168.1.2:8083;
         }
 
         location ~* ^/api/ {
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            # docker compose service through common internal network
-            proxy_pass http://apibackend;
+             proxy_http_version 1.1;
+             proxy_pass http://192.168.1.2:18085;
         }
 
         # redirect server error pages to the static page /40x.html
