--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -18,16 +18,12 @@
 
         location ~* ^/auth/ {
              proxy_http_version 1.1;
-             proxy_set_header Host $host;
-             # docker compose service + docker port
-             proxy_pass http://authbackend;
+             proxy_pass http://192.168.1.2:8083;
         }
 
         location ~* ^/api/ {
              proxy_http_version 1.1;
-             proxy_set_header Host $host;
-             # docker compose service through common internal network
-             proxy_pass http://apibackend;
+             proxy_pass http://192.168.1.2:18086;
         }
 
         # redirect server error pages to the static page /40x.html
