--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@lagoshny/ngx-hateoas-client": "^3.5.0",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "15.7.2",
-    "@nrwl/express": "15.7.2",
-    "@nrwl/web": "15.7.2",
+    "@nrwl/angular": "15.8.5",
+    "@nrwl/express": "15.8.5",
+    "@nrwl/web": "15.8.5",
     "angular8-yandex-maps": "^15.0.0",
     "dayjs": "latest",
     "echarts": "^5.4.1",
@@ -54,11 +54,11 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "15.2.0",
     "@angular/language-service": "15.2.0",
-    "@nrwl/eslint-plugin-nx": "15.7.2",
-    "@nrwl/jest": "15.7.2",
-    "@nrwl/linter": "15.7.2",
-    "@nrwl/nx-cloud": "15.1.1",
-    "@nrwl/workspace": "15.7.2",
+    "@nrwl/eslint-plugin-nx": "15.8.5",
+    "@nrwl/jest": "15.8.5",
+    "@nrwl/linter": "15.8.5",
+    "@nrwl/nx-cloud": "15.2.0",
+    "@nrwl/workspace": "15.8.5",
     "@types/jest": "29.4.0",
     "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -67,11 +67,12 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
-    "jest-preset-angular": "^13.0.0",
-    "nx": "15.7.2",
+    "jest-preset-angular": "13.0.0",
+    "nx": "15.8.5",
     "prettier": "^2.7.1",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
   }
 }
+
