[+] Added sort and filter to the base list component

--- a/apps/money-tracker-ui/project.json
+++ b/apps/money-tracker-ui/project.json
@@ -29,7 +29,7 @@
           "apps/money-tracker-ui/src/styles.sass"
         ],
         "scripts": [],
-        "allowedCommonJsDependencies": ["keycloak-js"]
+        "allowedCommonJsDependencies": ["keycloak-js", "base64-js", "js-sha256"]
       },
       "configurations": {
         "default": {
