--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@lagoshny/ngx-hateoas-client": "^3.5.0",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "15.8.5",
-    "@nrwl/express": "15.8.5",
-    "@nrwl/web": "15.8.5",
+    "@nrwl/angular": "15.9.1",
+    "@nrwl/express": "15.9.1",
+    "@nrwl/web": "15.9.1",
     "angular8-yandex-maps": "^15.0.0",
     "dayjs": "latest",
     "echarts": "^5.4.1",
@@ -47,18 +47,18 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.0",
+    "@angular-devkit/build-angular": "^15.2.4",
     "@angular-eslint/eslint-plugin": "15.2.1",
     "@angular-eslint/eslint-plugin-template": "15.2.1",
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "15.2.0",
     "@angular/language-service": "15.2.0",
-    "@nrwl/eslint-plugin-nx": "15.8.5",
-    "@nrwl/jest": "15.8.5",
-    "@nrwl/linter": "15.8.5",
-    "@nrwl/nx-cloud": "15.2.0",
-    "@nrwl/workspace": "15.8.5",
+    "@nrwl/eslint-plugin-nx": "15.9.1",
+    "@nrwl/jest": "15.9.1",
+    "@nrwl/linter": "15.9.1",
+    "@nrwl/nx-cloud": "15.3.4",
+    "@nrwl/workspace": "15.9.1",
     "@types/jest": "29.4.0",
     "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -68,7 +68,7 @@
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "13.0.0",
-    "nx": "15.8.5",
+    "nx": "15.9.1",
     "prettier": "^2.7.1",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
