--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.0.2",
-    "@angular/cdk": "16.0.1",
-    "@angular/common": "16.0.2",
-    "@angular/compiler": "16.0.2",
-    "@angular/core": "16.0.2",
-    "@angular/forms": "16.0.2",
-    "@angular/localize": "16.0.2",
-    "@angular/material": "16.0.1",
-    "@angular/material-moment-adapter": "16.0.1",
-    "@angular/platform-browser": "16.0.2",
-    "@angular/platform-browser-dynamic": "16.0.2",
-    "@angular/router": "16.0.2",
-    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@angular/animations": "15.2.8",
+    "@angular/cdk": "15.2.8",
+    "@angular/common": "15.2.8",
+    "@angular/compiler": "15.2.8",
+    "@angular/core": "15.2.8",
+    "@angular/forms": "15.2.8",
+    "@angular/localize": "15.2.8",
+    "@angular/material": "15.2.8",
+    "@angular/material-moment-adapter": "15.2.8",
+    "@angular/platform-browser": "15.2.8",
+    "@angular/platform-browser-dynamic": "15.2.8",
+    "@angular/router": "15.2.8",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "~6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@lagoshny/ngx-hateoas-client": "^3.5.0",
@@ -35,7 +35,7 @@
     "angular8-yandex-maps": "^15.0.0",
     "dayjs": "latest",
     "echarts": "^5.4.2",
-    "keycloak-angular": "^14.0.0",
+    "keycloak-angular": "^13.0.0",
     "keycloak-js": "^21.1.1",
     "ngx-echarts": "^16.0.0",
     "postcss": "^8.4.18",
@@ -48,13 +48,13 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.2",
-    "@angular-eslint/eslint-plugin": "16.0.2",
-    "@angular-eslint/eslint-plugin-template": "16.0.2",
-    "@angular-eslint/template-parser": "16.0.2",
-    "@angular/cli": "~16.0.2",
-    "@angular/compiler-cli": "16.0.2",
-    "@angular/language-service": "16.0.2",
+    "@angular-devkit/build-angular": "^15.2.4",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "~15.2.7",
+    "@angular/compiler-cli": "15.2.8",
+    "@angular/language-service": "15.2.8",
     "@nrwl/eslint-plugin-nx": "16.2.1",
     "@nrwl/jest": "16.2.1",
     "@nrwl/linter": "16.2.1",
@@ -73,7 +73,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4"
+    "typescript": "~4.9.5"
   }
 }
 
