--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/cdk": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/localize": "16.2.12",
-    "@angular/material": "16.2.12",
-    "@angular/material-moment-adapter": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
-    "@fortawesome/angular-fontawesome": "^0.13.0",
-    "@fortawesome/fontawesome-svg-core": "~6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@angular/animations": "17.0.8",
+    "@angular/cdk": "17.0.4",
+    "@angular/common": "17.0.8",
+    "@angular/compiler": "17.0.8",
+    "@angular/core": "17.0.8",
+    "@angular/forms": "17.0.8",
+    "@angular/localize": "17.0.8",
+    "@angular/material": "17.0.4",
+    "@angular/material-moment-adapter": "17.0.4",
+    "@angular/platform-browser": "17.0.8",
+    "@angular/platform-browser-dynamic": "17.0.8",
+    "@angular/router": "17.0.8",
+    "@fortawesome/angular-fontawesome": "0.14.1",
+    "@fortawesome/fontawesome-svg-core": "6.5.1",
+    "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@lagoshny/ngx-hateoas-client": "^3.8.1",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "16.10.0",
-    "@nrwl/express": "16.10.0",
-    "@nrwl/web": "16.10.0",
-    "angular8-yandex-maps": "^16.1.0",
+    "@nrwl/angular": "17.2.8",
+    "@nrwl/express": "17.2.8",
+    "@nrwl/web": "17.2.8",
+    "angular8-yandex-maps": "17.1.0",
     "dayjs": "latest",
     "echarts": "^5.4.3",
-    "keycloak-angular": "^14.1.0",
+    "keycloak-angular": "^15.0.0",
     "keycloak-js": "^22.0.5",
     "ngx-echarts": "^16.2.0",
     "postcss": "^8.4.18",
@@ -45,21 +45,21 @@
     "sass-loader": "^13.2.2",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.5.2",
-    "zone.js": "~0.13.0"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.10",
+    "@angular-devkit/build-angular": "^17.0.0",
     "@angular-eslint/eslint-plugin": "17.1.1",
     "@angular-eslint/eslint-plugin-template": "17.1.1",
     "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "~16.2.10",
-    "@angular/compiler-cli": "16.2.12",
-    "@angular/language-service": "16.2.12",
-    "@nrwl/eslint-plugin-nx": "16.2.1",
-    "@nrwl/jest": "16.2.1",
-    "@nrwl/linter": "16.2.1",
-    "@nrwl/nx-cloud": "16.0.5",
-    "@nrwl/workspace": "16.2.2",
+    "@angular/cli": "~17.0.8",
+    "@angular/compiler-cli": "17.0.8",
+    "@angular/language-service": "17.0.8",
+    "@nrwl/eslint-plugin-nx": "17.2.8",
+    "@nrwl/jest": "17.2.8",
+    "@nrwl/linter": "17.2.8",
+    "@nrwl/nx-cloud": "16.5.2",
+    "@nrwl/workspace": "17.2.8",
     "@types/jest": "29.4.0",
     "@types/node": "^18.14.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -68,12 +68,12 @@
     "eslint-config-prettier": "8.8.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "jest-preset-angular": "13.1.1",
-    "nx": "16.2.1",
+    "jest-preset-angular": "13.1.4",
+    "nx": "17.2.8",
     "prettier": "^2.7.1",
-    "ts-jest": "29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2"
   }
 }
 
