--- a/libs/shared-components/project.json
+++ b/libs/shared-components/project.json
@@ -7,7 +7,7 @@
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/shared-components"],
+      "outputs": ["{workspaceRoot}/coverage/libs/shared-components"],
       "options": {
         "jestConfig": "libs/shared-components/jest.config.ts",
         "passWithNoTests": true
