--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.0.8",
-    "@angular/cdk": "17.0.4",
-    "@angular/common": "17.0.8",
-    "@angular/compiler": "17.0.8",
-    "@angular/core": "17.0.8",
-    "@angular/forms": "17.0.8",
-    "@angular/localize": "17.0.8",
-    "@angular/material": "17.0.4",
-    "@angular/material-moment-adapter": "17.0.4",
-    "@angular/platform-browser": "17.0.8",
-    "@angular/platform-browser-dynamic": "17.0.8",
-    "@angular/router": "17.0.8",
+    "@angular/animations": "17.3.12",
+    "@angular/cdk": "17.3.10",
+    "@angular/common": "17.3.12",
+    "@angular/compiler": "17.3.12",
+    "@angular/core": "17.3.12",
+    "@angular/forms": "17.3.12",
+    "@angular/localize": "17.3.12",
+    "@angular/material": "17.3.10",
+    "@angular/material-moment-adapter": "17.3.10",
+    "@angular/platform-browser": "17.3.12",
+    "@angular/platform-browser-dynamic": "17.3.12",
+    "@angular/router": "17.3.12",
     "@fortawesome/angular-fontawesome": "0.14.1",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
@@ -48,13 +48,13 @@
     "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-devkit/build-angular": "17.3.8",
     "@angular-eslint/eslint-plugin": "17.1.1",
     "@angular-eslint/eslint-plugin-template": "17.1.1",
     "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "~17.0.8",
-    "@angular/compiler-cli": "17.0.8",
-    "@angular/language-service": "17.0.8",
+    "@angular/cli": "17.3.8",
+    "@angular/compiler-cli": "17.3.12",
+    "@angular/language-service": "17.3.12",
     "@nrwl/eslint-plugin-nx": "17.2.8",
     "@nrwl/jest": "17.2.8",
     "@nrwl/linter": "17.2.8",
