--- a/libs/shared-components/project.json
+++ b/libs/shared-components/project.json
@@ -1,27 +1,44 @@
 {
   "name": "shared-components",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "projectType": "library",
   "sourceRoot": "libs/shared-components/src",
-  "prefix": "clematis-shared",
+  "prefix": "lib",
+  "projectType": "library",
+  "tags": ["shared-capability:angular"],
   "targets": {
-    "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/libs/shared-components"],
+    "build": {
+      "executor": "@nx/angular:package",
+      "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared-components/jest.config.ts",
-        "passWithNoTests": true
-      }
+        "project": "libs/shared-components/ng-package.json"
+      },
+      "configurations": {
+        "production": {
+          "tsConfig": "libs/shared-components/tsconfig.lib.prod.json"
+        },
+        "development": {
+          "tsConfig": "libs/shared-components/tsconfig.lib.json"
+        }
+      },
+      "defaultConfiguration": "production"
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
           "libs/shared-components/**/*.ts",
           "libs/shared-components/**/*.html"
         ]
       }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/libs/shared-components"],
+      "options": {
+        "jestConfig": "libs/shared-components/jest.config.ts",
+        "passWithNoTests": true
+      }
     }
-  },
-  "tags": ["shared-capability:angular"]
+  }
 }
