--- a/apps/money-tracker-ui/tsconfig.spec.json
+++ b/apps/money-tracker-ui/tsconfig.spec.json
@@ -1,7 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
+    "module": "commonjs",
+    "target": "es2016",
     "types": [
       "jest", "node"
     ]
@@ -12,6 +14,7 @@
   ],
   "include": [
     "jest.config.ts",
+    "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
