--- a/package.json
+++ b/package.json
@@ -12,31 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.3.12",
-    "@angular/cdk": "17.3.10",
-    "@angular/common": "17.3.12",
-    "@angular/compiler": "17.3.12",
-    "@angular/core": "17.3.12",
-    "@angular/forms": "17.3.12",
-    "@angular/localize": "17.3.12",
-    "@angular/material": "17.3.10",
-    "@angular/material-moment-adapter": "17.3.10",
-    "@angular/platform-browser": "17.3.12",
-    "@angular/platform-browser-dynamic": "17.3.12",
-    "@angular/router": "17.3.12",
-    "@fortawesome/angular-fontawesome": "0.14.1",
+    "@angular/animations": "~18.1.0",
+    "@angular/common": "~18.1.0",
+    "@angular/compiler": "~18.1.0",
+    "@angular/core": "~18.1.0",
+    "@angular/forms": "~18.1.0",
+    "@angular/localize": "~18.1.0",
+    "@angular/material": "~18.1.0",
+    "@angular/material-moment-adapter": "~18.1.0",
+    "@angular/platform-browser": "~18.1.0",
+    "@angular/platform-browser-dynamic": "~18.1.0",
+    "@angular/router": "~18.1.0",
+
+    "@fortawesome/angular-fontawesome": "0.15.0",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@lagoshny/ngx-hateoas-client": "^3.8.1",
     "@ngneat/content-loader": "^7.0.0",
-    "@nrwl/angular": "17.2.8",
-    "@nrwl/express": "17.2.8",
-    "@nrwl/web": "17.2.8",
-    "angular8-yandex-maps": "17.1.0",
+    "@nx/angular": "19.5.7",
+    "angular8-yandex-maps": "18.1.1",
     "dayjs": "latest",
     "echarts": "^5.4.3",
-    "keycloak-angular": "^15.0.0",
+    "keycloak-angular": "^16.0.1",
     "keycloak-js": "^22.0.5",
+    "moment": "latest",
     "ngx-echarts": "^16.2.0",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
@@ -45,33 +44,50 @@
     "sass-loader": "^13.2.2",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.5.2",
-    "zone.js": "0.14.2"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.8",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "17.3.8",
-    "@angular/compiler-cli": "17.3.12",
-    "@angular/language-service": "17.3.12",
-    "@nrwl/eslint-plugin-nx": "17.2.8",
-    "@nrwl/jest": "17.2.8",
-    "@nrwl/linter": "17.2.8",
-    "@nrwl/workspace": "17.2.8",
-    "@types/jest": "29.4.0",
-    "@types/node": "^18.14.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "~8.41.0",
-    "eslint-config-prettier": "8.8.0",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
-    "jest-preset-angular": "13.1.4",
-    "nx": "17.2.8",
-    "prettier": "^2.7.1",
-    "ts-jest": "29.1.1",
-    "ts-node": "10.9.2",
-    "typescript": "5.2.2"
+    "@angular-devkit/build-angular": "~18.1.0",
+    "@angular-devkit/core": "~18.1.0",
+    "@angular-devkit/schematics": "~18.1.0",
+    "@angular-eslint/eslint-plugin": "^18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.1",
+    "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cli": "~18.1.0",
+    "@angular/compiler-cli": "~18.1.0",
+    "@angular/language-service": "~18.1.0",
+    "@nx/devkit": "19.5.7",
+    "@nx/eslint": "19.5.7",
+    "@nx/eslint-plugin": "19.5.7",
+    "@nx/jest": "19.5.7",
+    "@nx/js": "19.5.7",
+    "@nx/playwright": "19.5.7",
+    "@nx/workspace": "19.5.7",
+    "@playwright/test": "^1.36.0",
+    "@schematics/angular": "~18.1.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/utils": "^7.16.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-playwright": "^0.15.3", 
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-preset-angular": "~14.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~18.1.0",
+    "nx": "19.5.7",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.5.2"
   }
 }
