[+] Added Agents Commodities and done some refactoring

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,9 @@
     },
     "@nrwl/angular:component": {
       "style": "css"
+    },
+    "@nx/angular:component": {
+      "style": "css"
     }
   },
   "neverConnectToCloud": true,
