--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,7 +29,7 @@
         "libs/shared-components/src/index.ts"
       ]
     },
-    "esModuleInterop": true,
+    "esModuleInterop": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
