Smaller fixes in UI

--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -3,9 +3,22 @@ services:
 
   money-tracker-ui:
     container_name: clematis-money-tracker-ui
-    image: money.tracker.ui:latest
+    image: money.tracker.ui.uat:latest
     ports:
       - "18081:80"
+    volumes:
+      - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - clematis
+    restart: unless-stopped
+
+  money-tracker-ui-demo:
+    container_name: clematis-money-tracker-ui-demo
+    image: money.tracker.ui.demo:latest
+    ports:
+      - "18082:80"
+    volumes:
+      - ./nginx-demo.conf:/etc/nginx/conf.d/default.conf
     networks:
       - clematis
     restart: unless-stopped
