--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -17,9 +17,9 @@ server {
            proxy_pass http://192.168.1.118:18085;
       }
 
-      location ~* ^/about {
+      location ~* ^/info/.* {
            proxy_http_version 1.1;
-           proxy_pass http://192.168.1.118:18085;
+           proxy_pass http://192.168.1.118:18085/$1;
       }
 
       # redirect server error pages to the static page /40x.html
