[*] Updated linting with ESLint for all modules

--- a/apps/money-tracker-ui/project.json
+++ b/apps/money-tracker-ui/project.json
@@ -160,6 +160,16 @@
         "browserTarget": "money-tracker-ui:build"
       }
     },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "lintFilePatterns": [
+          "apps/money-tracker-ui/**/*.ts",
+          "apps/money-tracker-ui/**/*.html"
+        ]
+      }
+    },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/money-tracker-ui"],
