--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nx build",
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
+    "lint": "nx lint",
     "mock": "json-server --watch ./src/assets/mockbackend.json --routes ./src/assets/routes.json",
     "postinstall": "node ./decorate-angular-cli.js"
   },
@@ -48,15 +49,12 @@
     "@angular-devkit/build-angular": "^18.2.5",
     "@angular-devkit/core": "^18.2.5",
     "@angular-devkit/schematics": "^18.2.5",
-    "@angular-eslint/eslint-plugin": "^18.3.1",
-    "@angular-eslint/eslint-plugin-template": "^18.3.1",
-    "@angular-eslint/template-parser": "^18.3.1",
     "@angular/cli": "^18.2.5",
     "@angular/compiler-cli": "^18.2.5",
     "@angular/language-service": "^18.2.5",
     "@nx/devkit": "19.5.7",
-    "@nx/eslint": "19.5.7",
-    "@nx/eslint-plugin": "19.5.7",
+    "@nx/eslint": "^19.5.7",
+    "@nx/eslint-plugin": "^19.5.7",
     "@nx/jest": "19.5.7",
     "@nx/js": "19.5.7",
     "@nx/playwright": "19.5.7",
@@ -74,6 +72,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-html": "^8.1.2",
     "eslint-plugin-playwright": "^0.15.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
