--- a/apps/money-tracker-ui/project.json
+++ b/apps/money-tracker-ui/project.json
@@ -133,23 +133,23 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "default": {
-          "browserTarget": "money-tracker-ui:build:default"
+          "buildTarget": "money-tracker-ui:build:default"
         },
         "demo": {
-          "browserTarget": "money-tracker-ui:build:demo"
+          "buildTarget": "money-tracker-ui:build:demo"
         },
         "local": {
-          "browserTarget": "money-tracker-ui:build:local",
+          "buildTarget": "money-tracker-ui:build:local",
           "proxyConfig": "./proxy.conf.json"
         },
         "qa": {
-          "browserTarget": "money-tracker-ui:build:qa"
+          "buildTarget": "money-tracker-ui:build:qa"
         },
         "uat": {
-          "browserTarget": "money-tracker-ui:build:uat"
+          "buildTarget": "money-tracker-ui:build:uat"
         },
         "development": {
-          "browserTarget": "money-tracker-ui:build:development"
+          "buildTarget": "money-tracker-ui:build:development"
         }
       },
       "defaultConfiguration": "development"
