--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve",
+    "start": "nx serve  --configuration development",
     "build": "nx build",
     "watch": "nx build --watch --configuration development",
     "test": "nx test",
@@ -13,75 +13,76 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.5",
-    "@angular/cdk": "^18.2.5",
-    "@angular/common": "^18.2.5",
-    "@angular/compiler": "^18.2.5",
-    "@angular/core": "^18.2.5",
-    "@angular/forms": "^18.2.5",
-    "@angular/localize": "^18.2.5",
-    "@angular/material": "^18.2.5",
-    "@angular/material-moment-adapter": "^18.2.5",
-    "@angular/platform-browser": "^18.2.5",
-    "@angular/platform-browser-dynamic": "^18.2.5",
-    "@angular/router": "^18.2.5",
-    "@fortawesome/angular-fontawesome": "0.15.0",
-    "@fortawesome/fontawesome-svg-core": "6.5.1",
-    "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "@angular/animations": "^19.2.13",
+    "@angular/cdk": "^19.2.13",
+    "@angular/common": "^19.2.13",
+    "@angular/compiler": "^19.2.13",
+    "@angular/core": "^19.2.13",
+    "@angular/forms": "^19.2.13",
+    "@angular/localize": "^19.2.13",
+    "@angular/material": "^19.2.13",
+    "@angular/material-moment-adapter": "^19.2.13",
+    "@angular/platform-browser": "^19.2.13",
+    "@angular/platform-browser-dynamic": "^19.2.13",
+    "@angular/router": "^19.2.13",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@lagoshny/ngx-hateoas-client": "^3.9.0",
     "@ngneat/content-loader": "^7.0.0",
-    "@nx/angular": "19.5.7",
-    "angular8-yandex-maps": "18.1.1",
+    "@nx/angular": "^21.1.2",
+    "angular8-yandex-maps": "^19.0.0",
     "dayjs": "latest",
     "echarts": "^5.5.1",
-    "keycloak-angular": "^16.0.1",
-    "keycloak-js": "^22.0.5",
-    "moment": "latest",
+    "keycloak-angular": "^19.0.2",
+    "keycloak-js": "^26.2.0",
+    "moment": "^2.30.1",
     "ngx-echarts": "^16.2.0",
     "rxjs": "~7.8.1",
     "sass": "^1.79.3",
     "sass-loader": "^13.3.3",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.7.0",
-    "zone.js": "^0.14.10"
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.5",
-    "@angular-devkit/core": "^18.2.5",
-    "@angular-devkit/schematics": "^18.2.5",
-    "@angular/cli": "^18.2.5",
-    "@angular/compiler-cli": "^18.2.5",
-    "@angular/language-service": "^18.2.5",
-    "@nx/devkit": "19.5.7",
-    "@nx/eslint": "^19.5.7",
-    "@nx/eslint-plugin": "^19.5.7",
-    "@nx/jest": "19.5.7",
-    "@nx/js": "19.5.7",
-    "@nx/playwright": "19.5.7",
-    "@nx/workspace": "19.5.7",
+    "@angular-devkit/build-angular": "^19.2.13",
+    "@angular-devkit/core": "^19.2.13",
+    "@angular-devkit/schematics": "^19.2.13",
+    "@angular/cli": "^19.2.13",
+    "@angular/compiler-cli": "^19.2.13",
+    "@angular/language-service": "^19.2.13",
+    "@nx/devkit": "^21.1.2",
+    "@nx/eslint": "^21.1.2",
+    "@nx/eslint-plugin": "^21.1.2",
+    "@nx/jest": "^21.1.2",
+    "@nx/js": "^21.1.2",
+    "@nx/playwright": "^21.1.2",
+    "@nx/workspace": "^21.1.2",
     "@playwright/test": "^1.47.2",
     "@schematics/angular": "^18.2.5",
     "@swc-node/register": "^1.10.9",
     "@swc/core": "^1.7.26",
     "@swc/helpers": "^0.5.13",
     "@types/jest": "^29.5.13",
+    "@types/keycloak-js": "^3.4.1",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@typescript-eslint/utils": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "@typescript-eslint/utils": "^8.32.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-html": "^8.1.2",
-    "eslint-plugin-playwright": "^0.15.3",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-playwright": "^2.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "^14.2.4",
     "jsonc-eslint-parser": "^2.4.0",
-    "ng-packagr": "~18.1.0",
-    "nx": "19.5.7",
-    "postcss": "^8.4.47",
-    "postcss-url": "~10.1.3",
+    "ng-packagr": "^19.2.2",
+    "nx": "^21.1.2",
+    "postcss": "^8.5.3",
+    "postcss-url": "^10.1.3",
     "prettier": "^2.8.8",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
