--- a/libs/model/tsconfig.spec.json
+++ b/libs/model/tsconfig.spec.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
+    "module": "nodenext",
+    "target": "es2016",
     "types": ["jest", "node"]
   },
   "files": ["src/test-setup.ts"],
