--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nx serve  --configuration development",
     "build": "nx build",
     "watch": "nx build --watch --configuration development",
-    "test": "nx test",
+    "test": "nx test --coverage --runInBand",
     "lint": "nx lint",
     "mock": "json-server --watch ./src/assets/mockbackend.json --routes ./src/assets/routes.json",
     "postinstall": "node ./decorate-angular-cli.js"
@@ -64,8 +64,7 @@
     "@swc-node/register": "^1.10.9",
     "@swc/core": "^1.7.26",
     "@swc/helpers": "^0.5.13",
-    "@types/jest": "^29.5.13",
-    "@types/keycloak-js": "^3.4.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
@@ -77,7 +76,7 @@
     "eslint-plugin-playwright": "^2.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "^14.2.4",
+    "jest-preset-angular": "^14.5.5",
     "jsonc-eslint-parser": "^2.4.0",
     "ng-packagr": "^19.2.2",
     "nx": "^21.1.2",
@@ -86,6 +85,6 @@
     "prettier": "^2.8.8",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.8.3"
   }
 }
