--- a/tools/tsconfig.tools.json
+++ b/tools/tsconfig.tools.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "outDir": "../dist/out-tsc/tools",
     "rootDir": ".",
-    "module": "commonjs",
-    "target": "es5",
+    "module": "nodenext",
+    "target": "es2016",
     "types": ["node"],
     "importHelpers": false
   },
