[*] SSL for UAT

--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -1,39 +1,72 @@
 server {
+    # Redirect HTTP to HTTPS
+    listen 80 default_server;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
 
-      listen     80 default_server;
-      root /var/www/money-tracker-ui;
+server {
+    listen 443 ssl default_server;
+    server_name _;
+    root /var/www/money-tracker-ui;
 
-      # Disabled caching so the browser won't cache the site.
-      expires           0;
-      add_header        Cache-Control private;
+    # SSL configuration
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
 
-      location ~* ^/auth/(.*) {
-           proxy_http_version 1.1;
-           proxy_pass http://192.168.1.157:8080/$1;
-      }
+    # Recommended SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
 
-      location ~* ^/api/ {
-           proxy_http_version 1.1;
-           proxy_pass http://192.168.1.118:18085;
-      }
+    # SSL session settings
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
 
-      location ~* ^/info/(.*) {
-           proxy_http_version 1.1;
-           proxy_pass http://192.168.1.118:18085/$1;
-      }
+    # HSTS (uncomment if you're sure)
+    # add_header Strict-Transport-Security "max-age=63072000" always;
 
-      # redirect server error pages to the static page /40x.html
-      error_page 404 /404.html;
-          location = /40x.html {
-      }
+    # Disabled caching so the browser won't cache the site.
+    expires           0;
+    add_header        Cache-Control private;
 
-      # redirect server error pages to the static page /50x.html
-      error_page 500 502 503 504 /50x.html;
-          location = /50x.html {
-      }
+    location ~* ^/auth/(.*) {
+        proxy_http_version 1.1;
+        proxy_pass http://192.168.1.157:8080/$1;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+    }
 
-      location / {
-          index index.html;
-          try_files $uri $uri/ /index.html;
-      }
+    location ~* ^/api/ {
+        proxy_http_version 1.1;
+        proxy_pass http://192.168.1.118:18085;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+    }
+
+    location ~* ^/info/(.*) {
+        proxy_http_version 1.1;
+        proxy_pass http://192.168.1.118:18085/$1;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+    }
+
+    # redirect server error pages to the static page /40x.html
+    error_page 404 /404.html;
+        location = /40x.html {
+    }
+
+    # redirect server error pages to the static page /50x.html
+    error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+    }
+
+    location / {
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
 }
