--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     image: money.tracker.ui.uat:latest
     ports:
       - '18081:80'
+      - '18443:443'
     volumes:
       - /home/clematis/mt-ui/nginx-default.conf:/etc/nginx/conf.d/default.conf
+      - ${WORKSPACE}/docker/nginx/ssl:/etc/nginx/ssl:ro
     networks:
       - clematis
     restart: unless-stopped
