[*] Fixes for openresty

--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -10,9 +10,9 @@ server {
     server_name _;
     root /var/www/money-tracker-ui;
 
-    # SSL configuration
-    ssl_certificate /etc/nginx/ssl/certificate.crt;
-    ssl_certificate_key /etc/nginx/ssl/private.key;
+    # SSL configuration for OpenResty
+    ssl_certificate /usr/local/openresty/nginx/ssl/certificate.crt;
+    ssl_certificate_key /usr/local/openresty/nginx/ssl/private.key;
 
     # Recommended SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
