--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - '18443:443'
     volumes:
       - /home/clematis/mt-ui/nginx-default.conf:/etc/nginx/conf.d/default.conf
-      - ssl_certs:/etc/nginx/ssl:ro
+      - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
     restart: unless-stopped
@@ -20,6 +20,7 @@ services:
       - '18082:80'
     volumes:
       - /home/clematis/mt-ui/nginx-demo.conf:/etc/nginx/conf.d/default.conf
+      - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
     restart: unless-stopped
