[*] Change the name to jenkins_ssl_certs

--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -27,6 +27,8 @@ services:
 
 volumes:
   ssl_certs:
+    name: jenkins_ssl_certs    # the external volume name
+    external: true
 
 networks:
   clematis:
